# first-in-list

./: Cargo.toml  flake.nix  main.cpp
benches/: benchmark.rs  simd.rs  sort.rs
python/: bench.py  main.py  test_main.py
src/: lib.rs  main.rs
