[package]
name = "min"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "sort"
harness = false

[dependencies]
chrono = "0.4.31"
counting_sort = "1.0.10"
criterion = { version = "0.5.1", features = ["html_reports"] }
#glidesort = { version = "0.1.2", features = ["unstable"] }
itertools = "0.11.0"
ndarray = "0.15.6"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
rand = "0.8.5"
sort = "0.8.5"
voracious_radix_sort = { version = "1.2.0", features = ["rayon", "voracious_multithread"] }

[profile.bench]
lto = true
codegen-units = 1
panic = "abort"
strip = true
